src/test/ui/parser/keyword-try-as-identifier-edition2018.stderr
error: expected pattern, found reserved keyword `try`
  --> $DIR/keyword-try-as-identifier-edition2018.rs:4:9
   |
LL |     let try = "foo";
   |         ^^^ expected pattern

error: aborting due to previous error

